
  * Fix compatibility with newer versions of gir-gtk which don't allow
    None in STRING columns of ListStores. (Jelmer Vernooij)

  * Properly handle popup menus when there is no selected revision in
    "bzr viz". (Jelmer Vernooij, #281717)

  * Ignore bzr-handle-patch.desktop in sofware center.
    (Jelmer Vernooij, #854245)

  * Fix searching in tree views. (Jelmer Vernooij, #928301)

 CHANGES

  * bzr-notify has been removed, as it was causing regressions
    on several machines and not particularly useful.
    (Jelmer Vernooij, #714767, #949798, #998994, #342135, #342136, #394536)

0.103.0	2011-12-11

 FEATURES

  * Internationalization support has been added. (David Planella, #621680)

  * Show avatars for committers and authors in "bzr viz". (Guillaume Hain)

  * gannotate now supports interactive substring search in the file content.
    interactive search for line numbers has been removed, use Ctrl-G instead.
    (Sergei Golubchik)

  * visualise now supports interactive changeset comment search.
    interactive search for revision numbers continues to work.
    (Sergei Golubchik)

  * Switch to gtk3. The old gtk2 branch is still available as lp:bzr-gtk/gtk2. (Curtis Hovey)

  * Remove keyring support - this is broken for GTK3, and replaced by a DBus service
    that is not specific to GNOME. Instead, bzr or bzr-dbus will provide support
    for this service. (Jelmer Vernooij)

 BUG FIXES

  * Ensure config directory exists before writing configuration.
    (Jelmer Vernooij, #231150)

  * Mark as supporting bzr 2.5.0. (Jelmer Vernooij)

  * Add X-GNOME-Autostart-Delay=30 to bzr-notify.desktop.
    (Mikkel Kamstrup Erlandsen, #861201)

0.100.0	2011-03-02

 BUG FIXES

  * make sure that gdiff opened from gannotate knows its parent
    (gannotate, that is, and does not exit when it (gdiff) is closed.

  * Clarify 'visualise' help about the multiple branches feature
    and the --revision parameter. (Vincent Ladeuil, #556347)
